--- a/Server/pom.xml
+++ b/Server/pom.xml
@@ -72,7 +72,11 @@
 			<artifactId>iban4j</artifactId>
 			<version>3.2.1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+    </dependencies>
 
 	<dependencyManagement>
 		<dependencies>
