resttemplate, bez obsługi błędów, zaczątek basic auth dla resta

--- a/Server/src/test/resources/application.yml
+++ b/Server/src/test/resources/application.yml
@@ -1,6 +1,7 @@
 app:
   config:
     externalBankListFile: /home/kryszak/external.csv
+    externalBankUri: "/accounts/{accountNumber}/history"
     bankCode: "00117298"
 spring:
   datasource:
