--- a/Server/src/test/resources/application.yml
+++ b/Server/src/test/resources/application.yml
@@ -4,8 +4,8 @@ app:
     externalBankUri: "/accounts/{accountNumber}/history"
     bankCode: "00117298"
     externalAuth:
-      user: "user"
-      password: "password"
+      user: "admin"
+      password: "admin"
 spring:
   datasource:
     url: jdbc:h2:mem:test
