--- a/Server/src/test/resources/application.yml
+++ b/Server/src/test/resources/application.yml
@@ -6,6 +6,9 @@ app:
     externalAuth:
       user: "admin"
       password: "admin"
+    client:
+      connectTimeout: 5000
+      readTimeout: 5000
 spring:
   datasource:
     url: jdbc:h2:mem:test
