--- a/Server/src/main/resources/application.yml
+++ b/Server/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 app:
   config:
-    externalBankListFile: /home/kryszak/external.csv
+    externalBankListFile: /home/kryszak/external.csv # zmienić na nowym środowisku!
     externalBankUri: "/accounts/{accountNumber}/history"
     bankCode: "00117298"
     externalAuth:
@@ -15,7 +15,7 @@ spring:
       enabled: true
       path: /h2
   datasource:
-    url: jdbc:h2:file:/home/kryszak/workspace/BSR/db/h2data
+    url: jdbc:h2:file:/home/kryszak/workspace/BSR/db/h2data # zmienić na nowym środowisku!
     username: sa
     password:
     driver-class-name: org.h2.Driver
