--- a/Client/pom.xml
+++ b/Client/pom.xml
@@ -30,7 +30,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>bsr.project.bank.Main</mainClass>
+                            <mainClass>client.Main</mainClass>
                         </manifest>
                     </archive>
                     <appendAssemblyId>false</appendAssemblyId>
