--- a/.travis.yml
+++ b/.travis.yml
@@ -17,5 +17,5 @@ matrix:
 script: cd Server && mvn clean install
 
 after_success:
-  - cd Server && mvn test
+  - mvn test
   - bash <(curl -s https://codecov.io/bash)
