--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,8 +13,8 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
+      - run: cd Server
       - name: Build with Maven
-        run: cd Server
         run: mvn clean install
       - name: Code coverage report
         run: bash <(curl -s https://codecov.io/bash)
