--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,11 @@ name: Build
 
 on: [push]
 
+defaults:
+  run:
+    shell: bash
+    working-directory: Server
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,7 +18,6 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      - run: cd Server
       - name: Build with Maven
         run: mvn clean install
       - name: Code coverage report
